--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <input type="checkbox" name="isDone" {{#if this.isDone }} checked {{/if}} disabled>
     {{this.name}}
     <a href="./todos/{{ this._id }}">detail</a>
-    <a href="./todos/{{ this._id }}/edit">edit</a><!-- 加入這行 -->
+    <a href="./todos/{{ this._id }}/edit">edit</a>
     <form action="./todos/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
       <button type="submit">delete</button>
     </form>
