--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
+<a href="/todos/new" class="btn btn-primary mb-3"></a>
+
 <ul class="list-group">
   {{#each todos}}
   <li class="list-group-item">
