--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<a href="/todos/new" class="btn btn-primary mb-3"></a>
+<a href="/todos/new" class="btn btn-primary mb-3">Create</a>
 
 <ul class="list-group">
   {{#each todos}}
