feat: add message partials and install bcryptjs

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,6 +3,7 @@
     <div class="card card-body">
       
       <h1 class="text-center mt-3">Login</h1>
+        {{> message}}
       <form action="/users/login" method="POST">
 
         <div class="form-group">
