--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,8 +1,11 @@
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
+
       <h1 class="text-center mt-3">Register</h1>
+        {{> message}}
       <form action="/users/register" method="POST">
+
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" id="name" name="name" class="form-control" placeholder="Enter Name" value="{{ name }}">
