--- a/views/login.hbs
+++ b/views/login.hbs
@@ -17,6 +17,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
 
       </form>
 
